--- a/app/src/main/res/layout/activity_campaign_view.xml
+++ b/app/src/main/res/layout/activity_campaign_view.xml
@@ -10,7 +10,10 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/campTB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:title="مرشدي في الحج"
+        android:visibility="visible"
+        android:background="#ffd600">
 
     </android.support.v7.widget.Toolbar>
 
