--- a/app/src/main/res/layout/activity_murshid_sign_in.xml
+++ b/app/src/main/res/layout/activity_murshid_sign_in.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/makkah_bg"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,12 +10,9 @@
     <com.google.android.gms.common.SignInButton
         android:id="@+id/signInBtn"
         android:layout_width="240dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="38dp">
+        android:layout_height="50dp">
 
     </com.google.android.gms.common.SignInButton>
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
