--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_main_points"
+        android:icon="@drawable/baseline_location_on_black_48"
+        android:title="@string/title_main_points" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_campaigns"
+        android:icon="@drawable/baseline_view_list_black_48"
+        android:title="@string/title_campaigns" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_track_guide"
+        android:icon="@drawable/baseline_gps_fixed_black_48"
+        android:title="@string/title_track_guide" />
 
 </menu>
