--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.murshidiinhajj.LandingActivity"
-    android:orientation="vertical"
-    android:background="@drawable/makkah_bg">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/marhaba"
