--- a/app/src/main/res/layout/activity_campaign_view.xml
+++ b/app/src/main/res/layout/activity_campaign_view.xml
@@ -11,9 +11,9 @@
         android:id="@+id/campTB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="مرشدي في الحج"
-        android:visibility="visible"
-        android:background="#ffd600">
+        android:background="@color/colorPrimary"
+        app:title="@string/app_name"
+        app:titleTextColor="@color/colorAccent">
 
     </android.support.v7.widget.Toolbar>
 
@@ -31,8 +31,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="511dp"
+        android:scrollbars="vertical"
+        tools:layout_editor_absoluteY="56dp" />
 
 </android.support.constraint.ConstraintLayout>
